--- a/forgot-password.html
+++ b/forgot-password.html
@@ -1,27 +1,9 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-   <head>
-      <link rel="stylesheet" href="./forgot-password.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-      <meta charset="utf-8">
-      <title>Forgot Password Page</title>
-   </head>
-   <body>
-      <div class="container">
-         <div class="login-box">
-            <div class="centered">
-               <div class="user-box">
-                  <input type="text" id="email" name="email" required="" />
-                  <label style="color: white;">Email</label>
-                  <span id="email-error" class="error-message"></span>
-               </div>
-               <div class="content">
-               </div>
-               <div class="field">
-                  <input type="submit" id="submit" style="background-color: #E35F20; color: white;" value="Submit">
-               </div>
-            </div>
-         </div>
-         <script src="../capstone/scripts/script.js"></script>
-      </body>
+<html>
+  <body>
+    <form method="post" action="send_link.php">
+      <p>Enter Email Address To Send Password Link</p>
+      <input type="text" name="email">
+      <input type="submit" name="submit_email">
+    </form>
+  </body>
 </html>
